[package]
name = "fluster_core"
version = "0.1.0"
authors = ["lprimrose"]
edition = "2018"

[dependencies]
bincode = "1.2"
nom = "5.1"
pathfinder_color = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_content = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git" }
serde = "1.0"
streaming-iterator = "0.1"
uuid = { version = "0.8", features = ["serde"] }

[dev-dependencies]
mockall = "0.6"
