[package]
name = "fluster_core"
version = "0.1.0"
authors = ["Lillian Primrose"]
edition = "2018"

[dependencies]
aabb-quadtree-pathfinder = { git = "https://github.com/kyythane/aabb-quadtree.git" }
bincode = "1.2"
circular = "0.3"
nom = "5.1"
pathfinder_color = "0.5.*"
pathfinder_content = "0.5.*"
pathfinder_geometry ="0.5.*"
pathfinder_simd = "0.5.*"
serde = "1.0"
serde_bytes = "0.11"
streaming-iterator = "0.1"
uuid = { version = "0.8", features = ["serde"] }
reduce = "0.1"

[dev-dependencies]
iobuffer = "0.2.0"
mockall = "0.6"
