[package]
name = "fluster_core"
version = "0.1.0"
authors = ["Lillian Primrose"]
edition = "2018"

[dependencies]
bincode = "1.2"
circular = "0.3"
nom = "5.1"
pathfinder_color = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_canvas = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_content = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_simd = { git = "https://github.com/servo/pathfinder.git" }
serde = "1.0"
serde_bytes = "0.11"
streaming-iterator = "0.1"
uuid = { version = "0.8", features = ["serde"] }
reduce = "0.1"
specs = { version = "0.16", features = ["specs-derive", "shred-derive"] }
palette = { git = "https://github.com/Ogeon/palette.git", features = ["serializing"] }

[dev-dependencies]
iobuffer = "0.2.0"
mockall = "0.7"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false # Disable features which are enabled by default
features = ["prepush-hook", "run-for-all", "run-cargo-test", "run-cargo-clippy", "run-cargo-fmt"]
