[package]
name = "fluster_editor"
version = "0.1.0"
authors = ["Lillian Primrose"]
license = "Unlicense"
edition = "2018"

[dependencies]
gl = "0.14"
sdl2 = "0.33"
fluster_core = { path = "../fluster_core" }
fluster_graphics = { path = "../fluster_graphics" }
pathfinder_canvas = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_color = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_content = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_gpu = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_gl = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder.git" }
uuid = { version = "0.8", features = ["v4"] }
palette = { git = "https://github.com/Ogeon/palette.git" }
iced = { git = "https://github.com/hecrj/iced.git", features = ["image"] }
iced_native = { git = "https://github.com/hecrj/iced.git" }
iced_graphics = { git = "https://github.com/hecrj/iced.git" }
iced_winit = { git = "https://github.com/hecrj/iced.git" }
