[package]
name = "fluster_graphics"
version = "0.1.0"
authors = ["Lillian Primrose"]
edition = "2018"

[dependencies]
fluster_core = { path = "../fluster_core" }
pathfinder_canvas = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_color = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_content = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_geometry = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_gpu = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_renderer = { git = "https://github.com/kyythane/pathfinder.git" }
