[package]
name = "fluster_graphics"
version = "0.1.0"
authors = ["Lillian Primrose"]
edition = "2018"

[dependencies]
fluster_core = { path = "../fluster_core" }
pathfinder_canvas = "0.5.*"
pathfinder_color = "0.5.*"
pathfinder_content = "0.5.*"
pathfinder_geometry = "0.5.*"
pathfinder_gpu = "0.5.*"
pathfinder_renderer = "0.5.*"
