[package]
name = "fluster_player"
version = "0.1.0"
authors = ["lprimrose"]
edition = "2018"

[dependencies]
fluster_core = { path = "../fluster_core" }
fluster_graphics = { path = "../fluster_graphics" }
pathfinder_canvas = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_color = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_content = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_geometry = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_gpu = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_gl = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_renderer = { git = "https://github.com/kyythane/pathfinder.git" }
pathfinder_resources = { git = "https://github.com/kyythane/pathfinder.git" }
gl = "0.14"
sdl2 = "0.33"
sdl2-sys = "0.33"
uuid = { version = "0.8", features = ["v4"] }