[package]
name = "fluster_player"
version = "0.1.0"
authors = ["Lillian Primrose"]
edition = "2018"

[dependencies]
fluster_core = { path = "../fluster_core" }
fluster_graphics = { path = "../fluster_graphics" }
pathfinder_canvas = "0.5.*"
pathfinder_color = "0.5.*"
pathfinder_content = "0.5.*"
pathfinder_geometry = "0.5.*"
pathfinder_gpu = "0.5.*"
pathfinder_gl = "0.5.*"
pathfinder_renderer = "0.5.*"
pathfinder_resources = "0.5.*"
gl = "0.14"
sdl2 = "0.33"
sdl2-sys = "0.33"
uuid = { version = "0.8", features = ["v4"] }