[package]
name = "fluster_player"
version = "0.1.0"
authors = ["Lillian Primrose"]
edition = "2018"

[dependencies]
fluster_core = { path = "../fluster_core" }
fluster_graphics = { path = "../fluster_graphics" }
pathfinder_canvas = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_color = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_content = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_geometry = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_gpu = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_gl = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_renderer = { git = "https://github.com/servo/pathfinder.git" }
pathfinder_resources = { git = "https://github.com/servo/pathfinder.git" }
gl = "0.14"
glutin = "0.23"
uuid = { version = "0.8", features = ["v4"] }
palette = { git = "https://github.com/Ogeon/palette.git" }