[package]
name = "fluster_editor_core"
version = "0.1.0"
authors = ["Lillian Primrose"]
license = "Unlicense"
build = "build.rs"
edition = "2018"

[dependencies]
gl = "0.14"
sdl2 = "0.33"
fluster_core = { path = "../../fluster_core" }
fluster_graphics = { path = "../../fluster_graphics" }
pathfinder_geometry = { git = "https://github.com/kyythane/pathfinder.git" }
