[package]
name = "fluster-editor-adaptor"
version = "0.1.0"
authors = ["Lillian Primrose"]
license = "Unlicense"
build = "build.rs"
edition = "2018"
exclude = ["artifacts.json", "index.node"]

[lib]
name = "fluster_editor_backend"
crate-type = ["cdylib"]

[build-dependencies]
neon-build = "0.4.0"

[dependencies]
neon = "0.4.0"
neon-serde = { git = "https://github.com/poljar/neon-serde.git" }
serde = "1.0"
serde_bytes = "0.11"
fluster_core = { path = "../../../fluster_core" }
